--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </section>
 
     <div class="vyhody">
-      <div class="vyhody__podpora">
+      <div class="vyhody__polozka">
         <img
           src="podklady/map.svg"
           alt="ikona mapoveho pointeru"
@@ -64,7 +64,7 @@
           poradí.
         </p>
       </div>
-      <div class="vyhody__sluzby">
+      <div class="vyhody__polozka">
         <img
           src="podklady/plane.svg"
           alt="ikona mapoveho pointeru"
@@ -77,7 +77,7 @@
           nebudete čekat.
         </p>
       </div>
-      <div class="vyhody__slevy">
+      <div class="vyhody__polozka">
         <img
           src="podklady/globe.svg"
           alt="ikona mapoveho pointeru"
@@ -90,7 +90,7 @@
           kontinentech.
         </p>
       </div>
-      <div class="vyhody__bezpeci">
+      <div class="vyhody__polozka">
         <img
           src="podklady/shield.svg"
           alt="ikona mapoveho pointeru"
@@ -131,8 +131,8 @@
     <h3>Novinky</h3>
 
     <section class="novinky">
-      <div class="novinky__zanzibar">
-        <div class="datum">15. 8. 2020</div>
+      <div class="novinky__polozka">
+        <div class="novinky__datum">15. 8. 2020</div>
         <h5>Magický Zanzibar</h5>
         <p>
           Zanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví
@@ -141,8 +141,8 @@
         </p>
       </div>
 
-      <div class="novinky__navrat">
-        <div class="datum">31. 9. 2020</div>
+      <div class="novinky__polozka">
+        <div class="novinky__datum">31. 9. 2020</div>
 
         <h5>Návrat českých občanů ze zahraničí</h5>
         <p>
@@ -152,8 +152,8 @@
         </p>
       </div>
 
-      <div class="novinky__kuba">
-        <div class="datum">6. 10. 2020</div>
+      <div class="novinky__polozka">
+        <div class="novinky__datum">6. 10. 2020</div>
 
         <h5>Na Kubu s PCR testem</h5>
         <p>
