--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       </div>
 
       <div class="polozky">
-        <div class="polozka__last">Last minute</div>
-        <div class="polozka__destinace">Destinace</div>
-        <div class="polozka__dotaz">Časté otázky</div>
+        <div class="polozky__last">Last minute</div>
+        <div class="polozky__destinace">Destinace</div>
+        <div class="polozky__dotaz">Časté otázky</div>
       </div>
     </header>
 
     <section class="zajezdy">
-      <div class="zajezdy__velky--vlevo">
+      <div class="zajezdy__velky--vlevo zajezdy__spolecne">
         <div class="zajezdy__cena">17 600 Kč</div>
         <div>
           <h2>Pohoda pod palmami</h2>
@@ -38,13 +38,13 @@
         </div>
       </div>
 
-      <div class="zajezdy__maly--vpravoNahore">
+      <div class="zajezdy__maly--vpravoNahore zajezdy__spolecne">
         <div class="zajezdy__cena">8 490 Kč</div>
 
         <h4>Klid u jezera</h4>
       </div>
 
-      <div class="zajezdy__maly--vpravoDole">
+      <div class="zajezdy__maly--vpravoDole zajezdy__spolecne">
         <div class="zajezdy__cena">4 990 Kč</div>
         <h4>Výlet na kole</h4>
       </div>
@@ -107,17 +107,17 @@
     <h3>Last minute zájezdy</h3>
 
     <section class="zajezdy">
-      <div class="zajezdy__maly--vlevoNahore">
+      <div class="zajezdy__maly--vlevoNahore zajezdy__spolecne">
         <div class="zajezdy__cena">18 500 Kč</div>
         <h4>Grand Canyon</h4>
       </div>
 
-      <div class="zajezdy__maly--vlevoDole">
+      <div class="zajezdy__maly--vlevoDole zajezdy__spolecne">
         <div class="zajezdy__cena">8 900 Kč</div>
         <h4>Pěšky po Kanárských ostrovech</h4>
       </div>
 
-      <div class="zajezdy__velky--vpravo">
+      <div class="zajezdy__velky--vpravo zajezdy__spolecne">
         <div class="zajezdy__cena">15 900 Kč</div>
         <div>
           <h2>Romantika u horského jezera</h2>
